syntax = "proto3";

option csharp_namespace = "Artemis.Protos.Identity";
import "google/api/annotations.proto";

package artemis.protos.identity;

// 账户服务协议定义
service Account {
  // 签入
  rpc SignIn (SingInRequest) returns (SignInResponse){
	  option (google.api.http) = {
		  post: "/Account/SignIn",
		  body: "*"
	  };
  }
}

// 签入请求
message SingInRequest {
  string userSign = 1;
  string password = 2;
}

// 签入响应
message SignInResponse {
  string message = 1;
}
